--- a/style.css
+++ b/style.css
@@ -1,5 +1,73 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gravitas+One&display=swap');
+
 * {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
+
+	font-family: "Outfit";
+}
+
+:root {
+	--background: #FFDEFC;
+	--text: #161616;
+	--accent: #F300A6;
+	--primary: #9C00FF;
+	--border: #FEACE4;
+}
+
+body {
+	height: 100vh;
+	background: var(--background);
+	color: var(--text);
+}
+
+nav {
+	width: 100%;
+	height: 10vh;
+	position: fixed;
+	top: 99999;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	border-bottom: 1px solid var(--border);
+	background: rgba(243,0,166,0.1);
+	backdrop-filter: blur(5px);
+}
+
+nav h2 {
+	color: var(--accent);
+	margin-left: 20px;
+	margin-right: 5px;
+}
+
+nav h4 {
+	color: var(--primary);
+}
+
+nav .page-anchors {
+	margin-left: 70px;
+	margin-right: 180px;
+}
+
+.welcome-section {
+	height: 100vh;
+	width: 100%;
+
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
+
+.welcome-section h1 {
+	font-family: "Gravitas One";
+	font-size: 4em;
+    background-image: linear-gradient(75deg, var(--accent), var(--primary));
+    background-size: 100%;
+    -webkit-background-clip: text;
+    -moz-background-clip: text;
+    -webkit-text-fill-color: transparent; 
+    -moz-text-fill-color: transparent;
 }
