--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 }
 
 body {
+	width: 100%;
 	height: 100vh;
 	background: var(--background);
 	color: var(--text);
@@ -31,24 +32,26 @@ nav {
 	display: flex;
 	flex-direction: row;
 	align-items: center;
+	justify-content: space-around;
 	border-bottom: 1px solid var(--border);
 	background: rgba(243,0,166,0.1);
 	backdrop-filter: blur(5px);
 }
 
-nav h2 {
+nav .name {
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+
+
+nav .name h2 {
 	color: var(--accent);
-	margin-left: 20px;
-	margin-right: 5px;
 }
 
-nav h4 {
+nav .name h4 {
 	color: var(--primary);
-}
-
-nav .page-anchors {
-	margin-left: 100px;
-	margin-right: 220px;
 }
 
 .welcome-section {
@@ -112,10 +115,17 @@ ul {
 	margin-left: 21px;
 }
 
+.prices {
+	margin-top: 30px;
+	margin-bottom: 30px;
+	width: 100%;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+	justify-content: center;
+}
+
 table {
-	margin-top: 10px;
-	margin-bottom: 10px;
-	margin-left: 320px;
 	border: 1px solid var(--accent);
 }
 
